--- a/style.css
+++ b/style.css
@@ -17,10 +17,11 @@ h1,h2,h3,ul,ol,a,p {
 }
 
 .box {
+    width: 500px;
     background-color: rgb(80, 56, 94);
     padding: 20px;
     border: solid rgb(189, 129, 224);
-    margin: 10px;
+    margin: 10px auto;
     border-width: 2px;
     border-radius: 10px;
 }
