--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(42, 5, 63);
+    /* background-color: rgb(42, 5, 63); */
     background-image: url("/Portfolio/assets/images/bg_image.jpg");
     background-repeat: no-repeat;
     background-size:cover;
