--- a/comingsoon.css
+++ b/comingsoon.css
@@ -9,7 +9,7 @@ body, html {
 
 body {
     background-color: #1a1a1a;
-    background: linear-gradient(135deg, #8a2be2, #4169E1);
+    background: linear-gradient(135deg, #48107d, #4169E1);
 
 }
 
